# 2GISTestAssignment

./: CMakeLists.txt
dev/: App.cpp  App.h  Metatypes.h  Types.cpp  Types.h  main.cpp
dev/model/: Domain.cpp  Domain.h  WordsPrimaryModel.cpp  WordsPrimaryModel.h  WordsProxyModel.cpp  WordsProxyModel.h
dev/parser/: ChunkParser.cpp  ChunkParser.h  Domain.cpp  Domain.h  Reader.cpp  Reader.h  Statistic.cpp  Statistic.h  Types.cpp  Types.h  Utils.cpp  Utils.h
dev/qml/: Chart.qml  FirstScreen.qml  Footer.qml  Header.qml  HorizontalLine.qml  MainWindow.qml  MySimpleChart.qml  MySimpleChartBarDelegate.qml  VerticalLine.qml  qml.qrc
dev/resources/: resources.qrc
